web/css/style.css
.user-avatar {
    width: 70px;
    height: 70px;
    border-radius: 100%;
}

.user-info {
    line-height: 12px;
}

.widget {
    background: rgb(255, 255, 255);
}

.absolute {
    position: absolute;
}

.fixed {
    position: fixed;
}

.top {
    top: 0;
}

.right {
    right: 0;
}

.bottom {
    bottom: 0;
}

.left {
    left: 0;
}

.relative {
    position: relative;
}

.layout-fill-x {
    min-width: 100% !important;
}

.md-row:focus {
    outline: none !important;
}

loader {
    position: absolute;
    z-index: 10000;
    background: rgba(255, 255, 255, 0.5);
    width: 100%;
    height: 100%;
    overflow: hidden;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.md-loader md-progress-circular {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.md-sidenav-large {
    width: 800px !important;
    max-width: 800px !important;
}

.md-sub-toolbar {
    height: 40px !important;
    min-height: 40px !important;
}

.md-sub-toolbar .md-toolbar-tools {
    height: 40px;
}

md-input-container.no-whitespace {
    margin: 0;
    padding: 0;
    vertical-align: bottom;
    height: 100%;
}

md-input-container.no-whitespace input {
    height: 100%;
    position: relative;
    border-bottom: none;
}

.md-date-time-picker-button {
    margin-top: -16px !important;
}

.time-input {
    width: 50px;
    font-size: 14px;
}

.time-input input.hours {
    text-align: right;
}

.time-input input.minutes {
    text-align: left;
}

.date-time-input-custom button.md-datepicker-button {
    min-height: 0 !important;
    height: 30px !important;
}

.date-time-input-custom div.md-datepicker-input-container {
    float: left;
    position: relative;
    bottom: 0;
}

#main_loader {
    opacity: 1;
    transition: 0.2s;
}

#main_loader.ng-hide {
    opacity: 0;
}

#login_container {
    background: url('./img/bg.jpg');
    background-size: cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: 0.2s;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10000;
}

.md-headline-small {
    font-size: 140%;
    opacity: 0.8;
}

.text-x2 {
    font-size: 200%;
}

.text-small {
    font-size: 50%;
}

.md-sidemenu-button md-icon:first-child,
.md-sidemenu-toggle md-icon:first-child {
    margin-right: 20px !important;
}

.md-sidemenu-wrapper.md-sidemenu-wrapper-icons .md-button {
    padding-left: 60px !important;
}

.md-sidemenu-group > md-sidemenu-button span,
.md-sidemenu-group > .md-sidemenu-content > .md-sidemenu-toggle {

}

.md-sidemenu-group > .md-sidemenu-content > .md-sidemenu-wrapper > .md-sidemenu-content {
    padding-left: 10px;
}

.md-sidemenu-group > .md-sidemenu-content > .md-sidemenu-wrapper > .md-sidemenu-content > .md-sidemenu-wrapper span {
    color: #7f8c8d;
    padding-left: 10px;
}

.kboard {
    background: #fff;
    padding: 15px;
    border-radius: 15px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
    font-size: 60%;
}

.kbutton {
    height: 50px;
    border-radius: 5px;
    position: relative;
    display: inline-block;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
    user-select: none;
    transition: 0.5s;
}

.kspace {
    position: relative;
    display: inline-block;
}

.kbutton span {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

img.user-img {
    max-width: 100%;
    transition: 0.5s;
    opacity: 1;
}

img.user-img.ng-hide {
    opacity: 0;
}

.progress-card-data-container {
    position: relative;
    display: block;
}

.progress-card-data-container span {
    font-size: 25px;
    white-space: nowrap;
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.progress-card-data-container md-progress-circular.absolute {
    position: absolute;
    top: 0;
    opacity: 0.25;
}

md-card-title-text div {
    cursor: pointer;
}

#unauthorized_wiggle_smiley {
    animation: wave 1s infinite;
    font-size: 50px;
}

@keyframes wave {
    0% {
        transform: rotate(100deg);
    }

    50% {
        transform: rotate(85deg);
    }

    100% {
        transform: rotate(100deg);
    }
}

